<resources>
    <string name="app_name">spynSDK</string>
    <string name="interstitialTitle">How it works</string>
    <string name="interstitialRewardsTitle">Get rewards for using Spyn</string>
    <string name="interstitialRewardsBody">The more you use the launcher, the more rewards you\'ll get! Best of all: it\'s absolutely FREE.</string>
    <string name="interstitialCustomTitle">Cool and customizable interface</string>
    <string name="interstitialCustomBody">The interface is clean and beautiful and can be adjusted to your taste.</string>
    <string name="interstitialSearchTitle">Enhanced search</string>
    <string name="interstitialSearchBody">Find stuff fast and get what you need when you need it.</string>
    <string name="interstitialContinue">Continue to Spyn</string>
    <string name="whoopsTitle">Whoops!</string>
    <string name="whoopsText">Something went wrong processing your payment, but don\'t worry, you can upgrade Hotspot Shield for FREE using Spyn.</string>
    <string name="startScreenTitle">Spyn<sup><small>TM</small></sup></string>
    <string name="startScreenText">Click the button below to start generating free rewards by using the Spyn Launcher</string>
    <string name="successTitle">Success!</string>
    <string name="successText">Hotspot Shield was successfully upgraded and connected to Spyn.</string>
    <string name="successButtonText">Continue to Spyn</string>
    <string name="whoopsButtonText">Upgrade for FREE using Spyn</string>
    <string name="startButtonText">Start using Spyn</string>

</resources>
