<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/interstitialbackground"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/interstitialTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextbold"
            android:text="@string/startScreenTitle"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:paddingTop="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/startScreenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextbold"
            android:text="@string/startScreenText"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:lineSpacingExtra="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="288dp"
            android:layout_marginRight="24dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openSpyn"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:paddingBottom="6dp"
            android:textStyle="bold"
            android:text="@string/startButtonText"
            android:background="@drawable/acceptbutton"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/avenirnextbold" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>